--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,8 @@ android {
         }
     }
     compileOptions {
+        coreLibraryDesugaringEnabled true
+
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -96,4 +98,8 @@ dependencies {
     kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.8.0'
 
     implementation "androidx.fragment:fragment-ktx:1.3.6"
+
+    implementation "io.github.vanpra.compose-material-dialogs:datetime:0.6.0"
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.9'
+
 }
