--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,4 +102,23 @@ dependencies {
     implementation "io.github.vanpra.compose-material-dialogs:datetime:0.6.0"
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.9'
 
+    def work_version = "2.6.0"
+
+    // (Java only)
+    implementation("androidx.work:work-runtime:$work_version")
+
+    // Kotlin + coroutines
+    implementation("androidx.work:work-runtime-ktx:$work_version")
+
+    // optional - RxJava2 support
+    implementation("androidx.work:work-rxjava2:$work_version")
+
+    // optional - GCMNetworkManager support
+    implementation("androidx.work:work-gcm:$work_version")
+
+    // optional - Test helpers
+    androidTestImplementation("androidx.work:work-testing:$work_version")
+
+    // optional - Multiprocess support
+    implementation "androidx.work:work-multiprocess:$work_version"
 }
